changed icon and some font style

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/main.css">
+
+    <link rel="icon" href="img/logo/logo3.png" type="image/png" sizes="16x16">
   </head>
 
   <body>
     <header>
       <h2>
-        coming soon<br />
-        for your "bullshit"<br />
-        problems<br />
-        in oil and gas ...
+        Coming soon<br />
+        for your<br /> "bullshit"<br />
+        problems in<br />
+        oil and gas.
       </h2>
 
       <h1><i class="fa fa-tint"></i>ilshit</h1>
