change custom fonts

--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Your solution for 'bullshit' oil and gas problems (coming soon)">
-    <meta name="keywords" content="oil and gas, tech solution, coming soon">
-    <meta name="viewport" 
-          content="
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Your solution for 'bullshit' oil and gas problems (coming soon)">
+  <meta name="keywords" content="oil and gas, tech solution, coming soon">
+  <meta name="viewport" content="
             width=device-width,
-            initial-scale=1.0"
-    />
+            initial-scale=1.0" />
 
-    <title>oilshit</title>
+  <title>oilshit</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    <link rel="icon" href="img/logo/logo3.png" type="image/png" sizes="16x16">
-  </head>
+  <link rel="icon" href="img/logo/logo3.png" type="image/png" sizes="16x16">
+</head>
 
-  <body>
-    <header>
-      <h2>
-        Coming soon<br />
-        for your<br /> "bullshit"<br />
-        problems in<br />
-        oil and gas.
-      </h2>
+<body>
+  <nav>
+    <h1><i class="fa fa-tint" style="margin-right: 2px;"></i>ilshit</h1>
+  </nav>
 
-      <h1><i class="fa fa-tint"></i>ilshit</h1>
+  <header>
+    <h1><i class="fa fa-tint"></i>ilshit</h1>
 
-      <p>Stay safe...</p>
-    </header>
+    <p>Stay safe...</p>
+  </header>
+  </div>
+</body>
 
-    <div class="coming-soon">
-      <marquee class="coming-soon-text">COVID-19 LINE DO NOT CROSS</span>
-    </div>
-  </body>
 </html>
