--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Your solution for 'bullshit' oil and gas problems (coming soon)">
-  <meta name="keywords" content="oil and gas, tech solution, coming soon">
+  <meta name="description" content="Your solution for 'bullshit' oil and gas problems (coming soon)" />
+  <meta name="keywords" content="oil and gas, tech solution, coming soon" />
   <meta name="viewport" content="
             width=device-width,
             initial-scale=1.0" />
 
   <title>oilshit</title>
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css" />
 
-  <link rel="icon" href="img/logo/logo3.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="img/logo/logo.png" type="image/png" sizes="16x16" />
 </head>
 
 <body>
   <nav>
-    <h1><i class="fa fa-tint" style="margin-right: 2px;"></i>ilshit</h1>
+    <h1><i class="fa fa-tint" style="margin-right: 2px"></i>ilshit</h1>
+    <ul>
+      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#about">ABOUT</a></li>
+    </ul>
   </nav>
 
   <header>
-    <h1><i class="fa fa-tint"></i>ilshit</h1>
-
-    <p>Stay safe...</p>
+    <h1>Welcome</h1>
   </header>
-  </div>
 </body>
 
 </html>
